# class-exercises-fall2024

./: README.md
java/: FindDuplicates.java
lab02/: ContainsPair.java
lab03/: answers.md
lab03-exercises/: README.md
lab04/: answers.md
lab05/: answers.md
lab05/lab_5/node-demo/: package-lock.json  package.json
lab05/lab_5/poetry-demo/: lab05-experiments.py  pyproject.toml
lab05/node-demo/: index.css  index.html  index.jsx
lab05/node-demo/src/: App.jsx
lab06/: .gitignore
lab06/javascript_rps/: eslint.config.js  helpers.js  run-tests-vanilla.js  your-task.js
lab06/javascript_rps/test/: run-tests-mocha.js
lab06/python_rps/: helpers.py  run_tests_framework.py  run_tests_vanilla.py  your_task.py
lab07/: README.md  index.html  package-lock.json  package.json  styles.css
lab07/src/: App.jsx  Profile.jsx  main.jsx
lab08/: .gitignore  App.jsx  index.html  main.jsx  package-lock.json  package.json  styles.css
lab09/: Dockerfile  README.md  answers.md  compose.yaml  init.sh  orm.py  pyproject.toml
project02/: .env  .gitignore  Dockerfile  README.md  compose.yaml
project02/backend/: .env  .flake8  db.py  db_setup.sh  models.py  populate.py  pyproject.toml  sample_orm_queries.py  serializers.py  server.py  users.csv
project02/backend/scripts/: check.sh  fix.sh  run_pr_checks.sh
project02/ui/: index.html  package.json  postcss.config.mjs  tailwind.config.js  vite.config.mjs
python/: find_duplicates.py  find_duplicates_dict.py
topic05/: .gitignore  README.md  pytest.ini
topic05/app/: arithmetic.py  main.py
topic05/tests/: test_main.py
(+8 files in other folders)
